//=====================================================

enum EUnitType{
	UALL	= 0; // all type
	UFIRE 	= 1;
	UWATER	= 2;
	UWIND	= 3;
	ULIGHT	= 4;
	UDARK	= 5;
	UNONE	= 6;
};

//general response protocol
message Header{
	required string apiVer		= 1;
	optional string sessionId	= 2;
	optional int32	packetId	= 3;
	optional int32	code		= 4; // result code
	optional string error		= 5; // result error description
};


//=====================================================

message EnemyInfo{
	required int32	unitId = 1;
	optional int32  hp = 2;
	optional int32  attack = 3;
	optional int32  defense = 4;
	optional int32  attackRound = 5;
	optional float  dropRatio   = 6;
	optional float  dropUnitId   = 7;
};

message QuestInfo {
	required int32 id = 1;
	optional int32 state = 2;
	optional int32 no = 3;
	optional string name = 4;
	optional string desc = 5;
	optional int32 stamina = 6; //cost stamina
	optional int32 floor = 7;		
	optional int32 rewardExp = 8;
	optional int32 rewardCoin = 9;
	repeated int32 allUnitKind = 10;
	repeated EnemyInfo enemyUnit = 11;
	optional UnitInfo boss = 12;
};

message QuestMapInfo {
	optional int32 version = 1;
	optional int32 id = 2;
	optional int32 type = 3;	//normal,promotion
	repeated QuestInfo quests = 4;
};

message ReqGetNewQuestMap {
	optional Header header = 1;
	optional int32 startId = 2;
};

message RspGetNewQuestMap {
	optional Header header = 1;
	repeated QuestMapInfo maps = 2;
};

enum EQuestState {
	QS_NEW		= 0;
	QS_CLEARED	= 1;
};

message ReqStartQuset {
	optional Header	header			= 1;
	optional uint32	questId			= 2; 
	optional uint32	questState		= 3; // QS_NEW | QS_CLEARED
	optional uint32	helperUserId	= 4; 
	optional Unit	helperUnit		= 5; 
	optional uint32	currentParty	= 6; 	
};

message RspStartQuset {
	optional Header	header			= 1;
	optional uint32	questId			= 2; 
	optional uint32	staminaNow		= 3; // current stamina
	optional uint32	staminaRecover	= 4; // stamina recover time
};

message ReqClearQuset {
	optional Header header 			= 1; 
	optional uint32	questId			= 2; 
	optional uint32	securityKey		= 3; 
	optional uint32	getMoney		= 4; 
	optional uint32	getExp			= 5; 
	repeated Unit	getUnit			= 6; 	
};

message RspClearQuset {
	optional Header		header		= 1;
	optional UserInfo	user 			= 2;
	optional AccountInfo acount	= 3;	
	optional uint32		getMoney	= 4;
	optional uint32		getExp		= 5;	
	repeated uint32		getUnit		= 6; //uniqueId list
};

message ReqGetQuestInfo {
	optional Header header 		= 1;
};

message RspGetQuestInfo {
	optional Header header 			= 1;
	optional uint32	questId			= 2; //
	optional uint32	currentStatus	= 3; // current quest status
};


//=====================================================

enum EValueType{
	FIXED 		= 1;
	MULTIPLE	= 2;
	PERCENT		= 3;
	SECOND		= 4;
	ROUND		= 5;
	COLORTYPE	= 6;
	RANDOMCOLOR	= 7;
};

enum EAttackType {
	ATK_SINGLE		= 0;
	ATK_ALL			= 1;
	RECOVER_HP		= 2;
};

enum EBoostType {
	BOOST_ATTACK	= 0;
	BOOST_HP		= 1;
};

enum EBoostTarget {
	UNIT_RACE	= 0;
	UNIT_TYPE	= 1;
};

enum EPeriod {
	EP_RIGHT_NOW	= 0; 
	EP_EVERY_ROUND = 1; // every round 
	EP_EVERY_STEP  = 2; // every moving step
};

//==================Active Skills: 14 kinds=====================================================

message SkillSingleAttack {
	optional EValueType type = 1; //FIXED | MULTIPLE
	optional float value = 2; //fixed:1000,10000,150000 | 100xATK
	optional EUnitType unitType = 3; //
};

message SkillAllAttack {
	optional EValueType type = 1; //FIXED | MULTIPLE
	optional float value = 2; //fixed:1000,10000,150000 | 100xATK
	optional EUnitType unitType = 3; //
};

message SkillSingleAtkRecoverHP { //single attack & recover HP to 100%
	optional EValueType type = 1; 	// MULTIPLE
	optional float value = 2; 	 	// 0.5x,1x,2x,3x,5x
};

message SkillSuicideAttack { //attack target and HP reduce to 1
	optional EValueType type = 1;	// 1:single | 2:all
	optional float value = 2;		// fixed:1000,10000,150000 | 100xATK
};

message SkillTargetTypeAttack { //only attack target type
	optional EValueType type = 1;	// 1:fixed 2:multiple
	optional float value = 2;		// 35000, 1.5x
	optional int32 period = 3;		// valid period ->  0:all time, 1: 1 round, n: n rounds...
	optional EUnitType unitType = 4;//
};

message SkillKillHP { //kill all people's HP
	optional EValueType type = 1; 	// 3:percent
	optional float		value = 2; 	// in percent: 11=11%, 15=15%, 30=30%
};

message SkillRecoverHP { 
	optional EValueType	type = 1;   // FIXED, PERCENT
	optional float 		value = 2;  //
	optional EPeriod 	period = 3; // optional: 1:every round 2:every moving step
};

message SkillRecoverSP { 
	optional EValueType	type = 1;  // FIXED
	optional float 		value = 2; // in step
};

message SkillReduceHurt { //reduce hurt x percent
	optional EValueType	type = 1;		// 3:percent
	optional float 		value = 2;		// in percent: 11=11%, 15=15%, 30=30%
	optional int32 		period = 3; 	// valid period ->  0:all time, 1: 1 round, n: n rounds...
	optional EUnitType	unitType = 4;	// target unit type
};

message SkillReduceDefence { 
	optional EValueType	type = 1;  //PERCENT
	optional float 		value = 2; //in step
	optional int32 		period = 3; //valid period ->  0:all time, 1: 1 round, n: n rounds...	
};

message SkillDeferAttackRound { //defer enemy attack
	optional EValueType	type = 1;  //ROUND
	optional float 		value = 2;
};

message SkillPoison { //defer enemy attack
	optional EValueType	type = 1;  //ROUND
	optional float 		value = 2;
};

message SkillDelayTime { //increase time for moving color block
	optional EValueType	type = 1;  //SECOND
	optional float 		value = 2; //1s, 2s
};

message SkillConvertUnitType { //convert one type to another type
	optional EValueType	type 	= 1;  		//COLORTYPE | RANDOMCOLOR
	optional EUnitType 	unitType1 = 2;  //from type
	optional EUnitType 	unitType2 = 3;  //target type
};

//---------------------------------------------------------------------------

message ActiveSkill {
	optional int32  no = 1;		//skill number
	optional string name = 2;	//skill name
	optional string desc = 3;	//skill description

//total 14 active skills
	optional SkillSingleAttack 			singleAttack		= 4;
	optional SkillAllAttack 			allAttack			= 5;
	optional SkillSingleAtkRecoverHP 	singleAtkRecoverHP	= 6;	//single attack & recover HP to 100%
	optional SkillSuicideAttack			suicideAttack		= 7;
	optional SkillTargetTypeAttack		targetTypeAttack	= 8;
	optional SkillKillHP 				killHP				= 9;
	optional SkillRecoverHP				recoverHP			= 10;
	optional SkillRecoverSP				recoverSP			= 11;
	optional SkillReduceHurt 			reduceHurt			= 12;
	optional SkillReduceDefence			reduceDefence		= 13;
	optional SkillDeferAttackRound 		deferAttackRound	= 14;
	optional SkillPoison				poison				= 15;
	optional SkillDelayTime 			delayTime			= 16; 	//increase time for moving color block
	optional SkillConvertUnitType 		convertUnitType		= 17;	//convert one type to another type													 
};


//==================PassiveSkill Skills: 2 kinds=====================================================
//
message SkillDodgeTrap {
		optional int32 trapLevel = 2;
};

message SkillAntiAttack {
		optional int32 probability 	= 1;
		optional int32 antiAtkRatio	= 2;
};

message PassiveSkill {
	optional int32  no = 1;
	optional string name = 2;
	optional string desc = 3;

	optional SkillAntiAttack antiAttack	= 4;
	optional SkillDodgeTrap	dodgeTrap	= 5;
};

//==================NormalSkill Skills=====================================================

message NormalSkill {
	optional int32  no = 1;
	optional string name = 2;
	optional string desc = 3;

	optional EAttackType attackType = 4; //SINGLE,ALL,RECOVER_HP
	repeated uint32 activeBlocks 	= 5; //[0,0],[1,1,1] => [Fire,Fire],[Water,Water,Water]
	optional float attackValue		= 6; //1.5xATK | 10%
};


//==================LeaderSkill Skills=====================================================

message SkillBoost {
	optional EBoostType 	boostType	= 1; // BOOST_ATTACK | BOOST_HP
	optional float 			boostValue	= 2; // 1.5x, 2.0x
	optional EBoostTarget 	targetType	= 3; // UNIT_RACE | UNIT_TYPE
	optional int32 			targetValue = 4; // target race
};

message SkillExtraAttack {
	optional EUnitType	unitType	= 1; //target unit type
	optional float		attackValue	= 2; //1.5x, 2.0x, 2.5x
};

message LeaderSkill {
	optional int32  no 		= 1;
	optional string name 	= 2;
	optional string desc 	= 3;
	optional SkillBoost				raceBoost	= 4;
	optional SkillRecoverHP			recoverHP	= 5; //recover HP every round
	optional SkillReduceHurt		reduceHurt	= 6; 
	optional SkillDelayTime			delayTime	= 7;
	optional SkillConvertUnitType	convertUnitType	= 8;
	optional SkillExtraAttack		extraAttack	= 9;
};

//==========================================================================================


//=====================================================

message UnitStatus {
	optional int32 type = 1; //6 types: fire,wind,water,light,dark,none
	optional int32 race = 2; //
	optional int32 rare = 3; //star
	optional int32 hp = 4;
	optional int32 attack = 5;
	optional int32 defence = 6;	
	optional int32 level = 7;
	optional int32 nextLvExp = 8;
	optional int32 cost = 9;	
};

message UnitInfo { 
	required int32  id = 1;
	optional string name = 2;
	optional NormalSkill skill1 = 3;
	optional NormalSkill skill2 = 4;
	optional LeaderSkill leaderSkill = 5;
	optional ActiveSkill activeSkill = 6;
	optional PassiveSkill passiveSkill = 7;
	optional int32  maxLevel = 8;
	optional int32  expType = 9;
	optional string profile = 10;
};

message Unit {  //unit instance
	required int32 uniqueId=1;
	optional int32 id = 2; //unit_id
	optional int32 exp=3;
	optional int32 level=4;
	optional int32 attack = 5;
	optional int32 defense = 6;
	optional int32 hp = 7;
	optional int32 addAttack = 8;
	optional int32 addDefence = 9;
	optional int32 addHp = 10;
	optional int32 limitbreakLv = 11;
	optional int32 getTime = 12;
};

message ReqGetUnitInfo {
	optional Header header = 1;
	repeated int32 unitIds = 2;
};

message RspGetUnitInfo {
	optional Header header = 1;
	repeated UnitInfo unitinfos = 2;
};

message ReqGetUnit {
	optional Header header = 1;
	repeated int32 unitIds = 2;
};

message RspGetUnit {
	optional Header header = 1;
	repeated Unit units = 2;
};

//=====================================================

message UserInfo {
	required int32	userId			= 1;
	optional string userName		= 2;
	optional int32	rank			= 3;
	optional int32	exp				= 4;
	optional int32	staminaNow		= 5;
	optional int32	staminaMax		= 6;
	optional uint32	staminaRecover	= 7; //recover time
	optional int32	loginTime		= 8; 
};

message AccountInfo {
	optional int32	userId				= 1;
	optional uint32	review				= 2;
	optional uint32	pay_total			= 3;
	optional uint32	pay_month			= 4;
	optional uint32	money				= 5;
	optional uint32	stone_pay			= 6;
	optional uint32	stone_free			= 7;
	optional uint32	stone				= 8;
	optional uint32	friend_pt			= 9;
	optional uint32	total_unit			= 10;
	optional uint32	total_party			= 11;
	optional uint32	total_friend		= 12;
	optional uint32	first_select_num	= 13;
};

message ReqGetUserInfo {
	optional Header header	= 1;
	optional int32	userId	= 2;
};

message RspGetUserInfo {
	optional Header		header	= 1;
	optional UserInfo	info	= 2;
};


message ReqLoginBack {
	optional Header header	= 1;
	optional int32	userId	= 2;
};

message RspLoginBack {
	optional Header		header	= 1;
	optional UserInfo	user	= 2;
};
